Corrections alignements et marges CSS

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 /*-------------------- Header ------------------*/
 
 header {
-    box-shadow: 5px 5px 2px grey;
     margin: 0;
 
     background-image: url('images_cv/symphony.png');
@@ -21,21 +20,25 @@ header {
     font-family: Helvetica, sans-serif;
 }
 img {
-    margin: 20px;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
 }
 .titre {
-    display: inline-block;
-    vertical-align: top;
+    margin-top: 50px;
+    margin-left: 0px;
 }
-
-
+header.col-md-6 {
+    padding: 0px;
+}
 /*--------------------- Main -------------------*/
 .texte {
     min-width: 150px;
     vertical-align: top;
+    margin-top: 10px;
     padding: 10px;
-    
-    text-align: ;
 }
 
 /*-------------------- Footer ------------------*/
@@ -43,14 +46,17 @@ img {
 footer {
     margin: 0;
     height: 470px;
-    box-shadow: 5px -5px 2px grey;
-    
+
     background-image: url('images_cv/symphony.png');
     background-repeat: repeat;
     background-attachment: fixed;
 }
-
+iframe {
+    margin-top: 10px;
+}
 footer p {
+    margin-top: 15px;
+    color: grey;
     font-family: Helvetica, sans-serif;
     font-size: 20px;
 }
